--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Coverflow - Accueil</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -10,61 +10,77 @@
 </head>
 <body>
 
+<!--barre de navigation-->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <i class="fas fa-bars"></i>
-      <a class="navbar-brand" href="#"><img src="../image/logo.png" style="width:40%" alt=logo></a>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
+      <div class="row">
+        
+          <i class="fas fa-bars"></i>
+          <a class="navbar-brand" href="#"><img src="../image/logo.png" style="width:40%" alt=logo></a>
+          <input type="text" class="search" placeholder="Search.."  >
+          <a href="#" class="go"><img class="arrow" src="../image/right.png" alt=fleche></a>
+          <button class ="btn" type ="button" id="Connexionbutton">Se Connecter</button>
+          <button class ="btn" type ="button" id="Inscriptionbutton">S'inscrire</button>
+          <button class="btn" type = "button" id="tags">#Tags</button>
+          <div id="displaybar">
+            Hello
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
   </div>
 </nav>
-  
-<div class="container-fluid text-center">    
-  <div class="row content">
+
+<div class="header" id="myHeader">
+ 
+<img class=backphoto src ="../image/bannière.jpg" alt=banniere>
+
+</div>
+
+
+<div class="container-fluid text-center"> 
+  <!--menu de gauche-->
+  <div id="menugauche" class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
+      <p><a href="#">Créer un post...</a></p>
+      <p><a href="#"class="tags" >#Tags</a></p>
       <p><a href="#">Link</a></p>
     </div>
-    <div class="col-sm-4 text-left"> 
-      <h1>Titre</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    
+    <!--zone de publication-->
+    <div class="col-sm-8 text-left"> 
+      <h1>Coverflow</h1>
+      <p1>Des questions techniques ? Trouvez toutes les réponses ici !</p1>
       <hr>
       <h3>Test</h3>
       <p>Lorem ipsum...</p>
     </div>
-    <div class="col-sm-4 text-left"> 
-      <h1>Titre</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <hr>
-      <h3>Test</h3>
-      <p>Lorem ipsum...</p>
-    </div>
+
+    <!--menu de droite-->
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+        <p><a href="#">Contacts :</a></p>
       </div>
       <div class="well">
-        <p>ADS</p>
+        <p><a href="#">Photos :</a></p>
       </div>
     </div>
   </div>
 </div>
+
 
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
 </footer>
 
 </body>
+
+<script type="text/javascript" src="../javascript/site.js"></script>
+
 </html>
 
